--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,7 +1,5 @@
-.wordSearch {
-  text-align: center;
-  font-size: 24px;
-  margin: 20px 20px;
-  border-radius: 10px;
-  font-family: 'Montserrat', sans-serif;
+.Dictionary section {
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
 }
