--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,8 +1,12 @@
+h3 {
+  font-weight: bold;
+}
 .wordMeaning {
-  text-align: center;
+  text-align: left;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   background-color: white;
   margin: 10px 20px;
+  padding: 10px;
   border-radius: 10px;
 }
