--- a/src/Results.css
+++ b/src/Results.css
@@ -1,8 +1,11 @@
-h2 {
-  text-align: center;
+.Results section {
+  text-align: left;
   font-family: "Montserrat", sans-serif;
-  font-size: 50px;
   background-color: white;
-  margin: 10px 20px;
+  margin: 5px 20px;
+  padding: 10px;
   border-radius: 10px;
+}
+h2 {
+  font-size: 50px;
 }
