--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -1,14 +1,22 @@
+.phonetics {
+  font-family: "Montserrat", sans-serif;
+  background-color: white;
+  border-radius: 10px;
+  text-align: left;
+  margin: 5px 20px;
+  padding: 10px;
+}
 a, span {
-    font-size: 22px;
+    font-size: 20px;
     color: #5C4B53;
     margin-bottom: 10px;
 }
 a {
-    margin-right: 10px;
+    margin: 10px;
     text-decoration: none;
     border: 1px solid #ddd;
     border-radius: 30px;
-    padding: 10px 20px;
+    padding: 8px 15px;
     transition: all 150ms ease-in-out;
 }
 a:hover {
@@ -16,6 +24,5 @@ a:hover {
     background-color: #5C4B53;
 }
 span {
-    
     opacity: 0.7;
 }
