--- a/src/Results.css
+++ b/src/Results.css
@@ -1,11 +1,14 @@
-.Results section {
-  text-align: left;
+.Results section,
+h2 {
   font-family: "Montserrat", sans-serif;
   background-color: white;
+  border-radius: 10px;
+  text-align: left;
   margin: 5px 20px;
   padding: 10px;
-  border-radius: 10px;
 }
+
 h2 {
   font-size: 50px;
+  font-weight: bold;
 }
