--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@ footer {
   font-family: "Montserrat", sans-serif;
 }
 
+.App {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
 footer {
   font-size: 12px;
