--- a/src/Phonetics.css
+++ b/src/Phonetics.css
@@ -6,23 +6,24 @@
   margin: 5px 20px;
   padding: 10px;
 }
-a, span {
-    font-size: 20px;
-    color: #5C4B53;
-    margin-bottom: 10px;
+.play-phonetics,
+span {
+  font-size: 20px;
+  color: #5c4b53;
+  margin-bottom: 10px;
 }
-a {
-    margin: 10px;
-    text-decoration: none;
-    border: 1px solid #ddd;
-    border-radius: 30px;
-    padding: 8px 15px;
-    transition: all 150ms ease-in-out;
+.play-phonetics {
+  margin: 10px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  border-radius: 30px;
+  padding: 8px 15px;
+  transition: all 150ms ease-in-out;
 }
-a:hover {
-    color: white;
-    background-color: #5C4B53;
+.play-phonetics:hover {
+  color: white;
+  background-color: #5c4b53;
 }
 span {
-    opacity: 0.7;
+  opacity: 0.7;
 }
